Remove redundant `--add-opens` from Gradle config
* Mark `SftpSessionFactoryTests.sharedSessionConcurrentAccess()`
and `StompServerIntegrationTests.testStompAdapters()` as `@RetryingTest(10)`
since they are failing sporadically with a lost native operating system resources